WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126866
Fix iOS build breakage from
http://trac.webkit.org/changeset/161844
https://bugs.webkit.org/show_bug.cgi?id=126866
Summary
Fix iOS build breakage from http://trac.webkit.org/changeset/161844
Maciej Stachowiak
Reported
2014-01-12 19:02:47 PST
Fix iOS build breakage from
http://trac.webkit.org/changeset/161844
Attachments
Patch
(1.43 KB, patch)
2014-01-12 19:03 PST
,
Maciej Stachowiak
no flags
Details
Formatted Diff
Diff
Patch
(1.49 KB, patch)
2014-01-12 19:05 PST
,
Maciej Stachowiak
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2014-01-12 19:03:38 PST
Created
attachment 220999
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-12 19:05:16 PST
Attachment 220999
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/text/TextBreakIteratorICU.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Maciej Stachowiak
Comment 3
2014-01-12 19:05:31 PST
Created
attachment 221000
[details]
Patch
Maciej Stachowiak
Comment 4
2014-01-12 19:15:18 PST
Committed
r161854
: <
http://trac.webkit.org/changeset/161854
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug