Fix iOS build breakage from http://trac.webkit.org/changeset/161844 https://bugs.webkit.org/show_bug.cgi?id=126866

Reviewed by Simon Fraser.

* platform/text/TextBreakIteratorICU.cpp:
(WebCore::cursorMovementIterator): Use initializeIterator instead of createSharedIterator,
which does not exist.


Canonical link: https://commits.webkit.org/144853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161854 268f45cc-cd09-0410-ab3c-d52691b4dbfc